--- a/app/src/main/res/layout/service_provider_item.xml
+++ b/app/src/main/res/layout/service_provider_item.xml
@@ -3,29 +3,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="end"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
+    android:layout_margin="4dp"
+    android:background="#333333">
 
 
     <ImageView
         android:id="@+id/serviceProviderImageView"
-        android:layout_width="40dp"
-        android:layout_height="48dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_margin="8dp"
-        android:src="@drawable/food"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_health"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/serviceNameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="إسعافات أولية"
-        android:textColor="#485465"
-        android:textSize="32sp"
-        app:layout_constraintEnd_toStartOf="@+id/serviceProviderImageView"
+        android:letterSpacing="-0.03"
+        android:lineSpacingExtra="8sp"
+        android:text="asd;k ask;d as;kd ;"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/serviceProviderImageView"
         app:layout_constraintTop_toTopOf="@id/serviceProviderImageView" />
 
 
@@ -34,9 +37,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="إسعافات أولية"
-        android:textColor="#858585"
-        android:textSize="24sp"
+        android:letterSpacing="-0.01"
+        android:lineSpacingExtra="4sp"
+        android:text="asd asd asd asd "
+        android:textColor="#999999"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/serviceNameTextView"
         app:layout_constraintStart_toStartOf="@+id/serviceNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/serviceNameTextView" />
