--- a/app/src/main/res/layout/problem_item_view.xml
+++ b/app/src/main/res/layout/problem_item_view.xml
@@ -28,9 +28,19 @@
         android:text="12,972"
         android:textColor="#ffffff"
         android:textSize="30sp"
-
         app:layout_constraintStart_toStartOf="@id/titleTextView"
         app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
+    <TextView
+        android:id="@+id/parentageTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+
+        android:text="-4%"
+        android:textColor="#ff4922"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/problemNumberTextView"
+        app:layout_constraintStart_toEndOf="@+id/problemNumberTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
