--- a/hodhodclint/src/main/res/layout/issues_item_view.xml
+++ b/hodhodclint/src/main/res/layout/issues_item_view.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/issueImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_background"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/ic_health"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
